all optimization methods run through but provide bad results